--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -2,47 +2,73 @@
 <html lang="eng">
  <head>
      <title>Todo list</title>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
      <link rel="stylesheet" href="style.css">
  </head>
 <body>
-<h1>My ToDo list</h1>
- <div id="todo-table">
-     <form action="" id="todoForm" >
-         <input type="text" name="taskText" placeholder="Add new item..." >
-         <button type="submit">Add Item</button>
-     </form>
 
-     <ul class="list-group" id="list">
-        <%for(let i = 0; i < todos.length; i++){%>
-           <li><%= todos[i].taskText %></li>
+ <div id="todo-table" class="container">
+     <h1>Add task</h1>
+     <form action="/todo" id="todoForm" method="post">
+         <div class="form-group">
+             <label for="taskTitle">Title</label>
+             <input type="text" name="taskTitle" class="form-control" placeholder="Add title..." >
+         </div>
+         <div class="form-group">
+             <label for="taskTitle">Text</label>
+             <textarea name="taskText" class="form-control" placeholder="Add text..." ></textarea>
+         </div>
+         <button class="btn btn-primary" type="submit">Add Item</button>
+     </form>
+    <div class="panel-container">
+        <h3>My ToDO list</h3>
+         <%for(let i=0; i < todos.length; i++) {%>
+             <div class="panel panel-default">
+                 <div class="panel-heading"><%= todos[i].taskTitle%> <button class="btn btn-delete panel-btn" data-id="<%= `${todos[i]._id}`%>"><i class="glyphicon glyphicon-remove"></i></button></div>
+                 <div class="panel-body">
+                     <%= todos[i].taskText %>
+                 </div>
+             </div>
          <%}%>
-     </ul>
+    </div>
  </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script>
     todoForm.onsubmit = function() {
       const xhr = new XMLHttpRequest();
       xhr.open('POST', '/todo', true);
       xhr.setRequestHeader('Content-Type', 'application/json');
-      xhr.send(JSON.stringify({taskText: this.elements.taskText.value}));
+      xhr.send(JSON.stringify(
+        {
+          taskText: this.elements.taskText.value,
+          taskTitle:this.elements.taskTitle.value
+        }
+        ));
+
 
       window.location.reload()
       return false;
   };
 
-    function deleteItem(elem) {
+    function deleteTask(elem) {
       const xhr = new XMLHttpRequest();
-      xhr.open('DELETE', `/todo/${elem}`, true)
+      xhr.open('DELETE', `todo/${elem}`, true)
       xhr.send();
+
+      window.location.reload()
+      return false;
     }
 
-    let item = document.querySelectorAll('li');
-    item.forEach((elem) => {
-      elem.addEventListener('click', function(){
-        let item = this.textContent.replace(/ /g,'')
-
-       deleteItem(item)
-      })
+    let task = document.querySelectorAll('.panel');
+    task.forEach((elem) => {
+     elem.querySelector('.btn-delete').addEventListener('click', function(e){
+       e.preventDefault();
+       deleteTask(this.dataset.id)
+     })
     })
+
 </script>
+
 </body>
 </html>
