--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,74 +1,24 @@
 <!DOCTYPE html>
-<html lang="eng">
- <head>
-     <title>Todo list</title>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-     <link rel="stylesheet" href="style.css">
- </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Edit Task</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-
- <div id="todo-table" class="container">
-     <h1>Add task</h1>
-     <form action="/todo" id="todoForm" method="post">
-         <div class="form-group">
-             <label for="taskTitle">Title</label>
-             <input type="text" name="taskTitle" class="form-control" placeholder="Add title..." >
-         </div>
-         <div class="form-group">
-             <label for="taskTitle">Text</label>
-             <textarea name="taskText" class="form-control" placeholder="Add text..." ></textarea>
-         </div>
-         <button class="btn btn-primary" type="submit">Add Item</button>
-     </form>
-    <div class="panel-container">
-        <h3>My ToDO list</h3>
-         <%for(let i=0; i < todos.length; i++) {%>
-             <div class="panel panel-default">
-                 <div class="panel-heading"><%= todos[i].taskTitle%> <button class="btn btn-delete panel-btn" data-id="<%= `${todos[i]._id}`%>"><i class="glyphicon glyphicon-remove"></i></button></div>
-                 <div class="panel-body">
-                     <%= todos[i].taskText %>
-                 </div>
-             </div>
-         <%}%>
-    </div>
- </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script>
-    todoForm.onsubmit = function() {
-      const xhr = new XMLHttpRequest();
-      xhr.open('POST', '/todo', true);
-      xhr.setRequestHeader('Content-Type', 'application/json');
-      xhr.send(JSON.stringify(
-        {
-          taskText: this.elements.taskText.value,
-          taskTitle:this.elements.taskTitle.value
-        }
-        ));
-
-
-      window.location.reload()
-      return false;
-  };
-
-    function deleteTask(elem) {
-      const xhr = new XMLHttpRequest();
-      xhr.open('DELETE', `todo/${elem}`, true)
-      xhr.send();
-
-      window.location.reload()
-      return false;
-    }
-
-    let task = document.querySelectorAll('.panel');
-    task.forEach((elem) => {
-     elem.querySelector('.btn-delete').addEventListener('click', function(e){
-       e.preventDefault();
-       deleteTask(this.dataset.id)
-     })
-    })
-
-</script>
-
+<div id="todo-table" class="container">
+    <h1>Edit task</h1>
+    <form action="todo/" id="todoForm" method="post">
+        <div class="form-group">
+            <label for="taskTitle">Title</label>
+            <input type="text" name="taskTitle" class="form-control" placeholder="Add title..." >
+        </div>
+        <div class="form-group">
+            <label for="taskTitle">Text</label>
+            <textarea name="taskText" class="form-control" placeholder="Add text..." ></textarea>
+        </div>
+        <button class="btn btn-primary" type="submit">Add Item</button>
+    </form>
+</div>
 </body>
 </html>
