--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -9,21 +9,57 @@
 <body>
 <div id="todo-table" class="container">
     <h1>Edit task</h1>
-    <form action="" id="todoForm" >
+    <form action="" id="todoForm" data-id="<%= todo._id %>">
         <div class="form-group">
             <label for="taskTitle">Title</label>
-            <input type="text" name="taskTitle" class="form-control" placeholder="Add title..." value="<%= todo.taskTitle %>" >
+            <input type="text" name="taskTitle" class="form-control" placeholder="Add title..." value="<%= todo.taskTitle %>" required>
         </div>
         <div class="form-group">
             <label for="taskTitle">Text</label>
-            <textarea name="taskText" class="form-control" placeholder="Add text..." ><%= todo.taskText %></textarea>
+            <textarea name="taskText" class="form-control" placeholder="Add text..." required><%= todo.taskText %></textarea>
         </div>
-        <button class="btn btn-primary" type="submit">Edit Task</button>
+        <button class="btn btn-warning" type="submit">Save</button>
+        <a class="btn btn-link" href="/todo">back</a>
+        <span class="form-message" id="alert"></span>
     </form>
+
 </div>
 
 <script>
+ let form = document.getElementById('todoForm');
+ let alert = document.getElementById('alert');
 
+ todoForm.addEventListener('submit', function(e) {
+   e.preventDefault();
+   let taskId = todoForm.dataset.id
+   let data = {};
+
+   try {
+     data = JSON.stringify({taskTitle: form.taskTitle.value, taskText: form.taskText.value})
+   } catch(e) {
+    throw Error('Invalid JSON',e);
+   }
+
+   fetch(`/todo/edit/${taskId}`, { method: 'PUT', headers: {
+     'Accept': 'application/json',
+     'Content-Type': 'application/json'
+   }, body: data }).then((res) => {
+     if(res.status === 200) {
+       alert.innerHTML = 'Well done! You successfully saved changes.';
+       alert.style.display = 'inline';
+       alert.style.color = 'green';
+     } else {
+       alert.innerHTML = 'Something went wrong, sorry!';
+       alert.style.display = 'inline';
+       alert.style.color = 'red';
+     }
+
+     setTimeout(() => {
+       alert.style.display = 'none';
+     }, 3000)
+
+   }).catch((err) => {throw Error(err)})
+ });
 </script>
 </body>
 </html>
