--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -19,7 +19,7 @@
             <textarea name="taskText" class="form-control" placeholder="Add text..." required><%= todo.taskText %></textarea>
         </div>
         <button class="btn btn-warning" type="submit">Save</button>
-        <a class="btn btn-link" href="/todo">back</a>
+        <a class="btn btn-default" href="/todo">back</a>
         <span class="form-message" id="alert"></span>
     </form>
 
