modal for signin

--- a/src/assert/css/style.css
+++ b/src/assert/css/style.css
@@ -20,3 +20,11 @@
 .form-message {
     display: none;
 }
+
+.nav-tabs {
+    border-bottom: none;
+}
+
+.modal-header_tabs {
+    padding-bottom: 0;
+}
