passport - login / logout

--- a/src/assert/css/style.css
+++ b/src/assert/css/style.css
@@ -32,3 +32,21 @@
 .center-block {
     float: none;
 }
+
+.avatar-wrap {
+    font-size: 71px;
+    border: 1px solid grey;
+    position: relative;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+}
+
+.avatar {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
