--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -2,36 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up</title>
+    <title><%= pageTitle %></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-4 center-block">
-            <div class="page-header">
-                <h1>Sign Up</h1>
-            </div>
-            <ol class="breadcrumb">
-                <li><a href="/">Go Home</a></li>
-            </ol>
-            <% if ( message.length > 0) { %>
-                <div class="alert alert-danger"><%= message %></div>
-            <% } %>
-            <form action="/signup" method="post">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" placeholder="Email" name="email">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" placeholder="Password" name="password">
-                </div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
-            </form>
-        </div>
-    </div>
-</div>
+  <%- include('parts/registration-form'); %>
 </body>
 </html>
