--- a/src/views/parts/registration-form.ejs
+++ b/src/views/parts/registration-form.ejs
@@ -19,7 +19,7 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" placeholder="Password" name="password">
                 </div>
-                <button type="submit" class="btn btn-primary">pageTitle</button>
+                <button type="submit" class="btn btn-primary"><%= pageTitle %></button>
             </form>
         </div>
     </div>
