--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,5 +8,26 @@
 </head>
 <body>
     <%- include('parts/registration-form'); %>
+    <script>
+        login.addEventListener('submit', function(e){
+          e.preventDefault();
+          const xhr = new XMLHttpRequest();
+          xhr.open('POST', '/login', true);
+          xhr.setRequestHeader('Content-Type', 'application/json');
+          let data = JSON.stringify(
+            {
+              email: this.elements.email.value,
+              password: this.elements.password.value,
+              _csrf: this.elements._csrf.value
+            }
+          )
+          xhr.send(data);
+          console.log(xhr.readyState)
+          xhr.onload = function () {
+            window.location = '/profile'
+          };
+
+        })
+    </script>
 </body>
 </html>
