--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -25,8 +25,6 @@
             throw Error('Invalid JSON',e);
           }
 
-          console.log(data)
-
           fetch('/login', {
             method: 'POST',
             headers: {
@@ -37,13 +35,10 @@
             credentials:'include',
             body: data
           }).then((res) => {
-            let state = {}
-            let title = "profile"
-
-            if(res.status === 200) {
-              history.replaceState(state, title, res.url);
-              location.reload();
-            }
+            return res.text()
+          }).then(function(body) {
+            let data = JSON.parse(body);
+            document.body.innerHTML = data.error;
           }).catch((err) => {
             throw err
           })
